# boilercv

./: .copier-answers.yml  .coveragerc  .dvcignore  .env  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .renovaterc.json  .sourcery.yaml  .taplo.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _dvc.yaml  apt.txt  build.txt  clip.sh  codecov.yml  dvc.yaml  dvc_repro.ps1  fix_up_subcool_nbs.py  frozen_requirements.txt  lock-high.json  lock.json  locks.json  myst.yml  params.yaml  params_schema.json  pyproject.toml  pyrightconfig.json  pytest.ini  pythonrc.py  renovate.json  repro.txt  requirements.in  requirements.txt  runtime.txt  (+6 more)
.dvc/: .gitignore  (+1 more)
.tools/: Copy-Template.ps1  Initialize-Repo.ps1  Sync-Python.ps1  boilercv_tools.py  lock.json  locks.json  pyproject.toml  sync.ps1  tools.ps1
.tools/requirements/: .gitignore  cv.in  dev.in  requirements.txt  requirements_both.txt  requirements_ci.txt  requirements_core.txt  requirements_dev.txt  requirements_docs.txt  requirements_nodeps.txt  requirements_project.txt  uv.in
.tools/scripts/: Build-Docs.ps1  ConvertTo-Docx.ps1  Copy-Template.ps1  Initialize-Repo.ps1  Invoke-Pyright.ps1  Repair-Notebooks.ps1  Set-StrictErrors.ps1  Sync-Python.ps1  Update-Boilercore.ps1  Update-Template.ps1  compose_pyproject.py  core.py  core_update.py  local_dev_configs.py  local_pyrightconfig.py  pythonstartup.py  update_requirements.py  warning_filters.py  zotero.lua
docs/: .gitignore  conf.py  contributing.md  correlations.ipynb  correlations.md  custom.css  dag.md  development.md  index.md  params.yaml  params_schema.json  patch.py  pyproject.toml  refs.bib  test.ipynb
docs/_static/: dag-23-06-13.md  dag.md
docs/boilercv_docs/: __init__.py  __main__.py  docstrings.py  equations.py  format.py  intersphinx.py  nbs.py  patch_nbs.py
docs/examples/: common.py  correlations.ipynb  index.md  tracks.ipynb
docs/experiments/e230920_subcool/: correlations.md  custom_features.ipynb  find_bubbles.ipynb  find_centers.ipynb  find_collapse.ipynb  find_contours.ipynb  find_objects.ipynb  find_size.ipynb  find_tracks.ipynb  find_tracks_trackpy.ipynb  get_thermal_data.ipynb  index.md  params.yaml  plot_tracks.ipynb
docs/experiments/e240215_plotting/: index.md  palettes.ipynb
docs/notebooks/: clean_docs_notebook.ipynb
docs/temp/: 8wk7yr64.ipynb  lve465wx.ipynb
pipeline/: pyproject.toml
pipeline/boilercv_pipeline/: __init__.py  correlations.py  sets.py  types.py  video.py
pipeline/boilercv_pipeline/captivate/: __init__.py  captures.py  previews.py
pipeline/boilercv_pipeline/correlations/: __init__.py  dimensionless_bubble_diameter.py
pipeline/boilercv_pipeline/correlations/dimensionless_bubble_diameter/: __init__.py  equations.py  equations.toml  expectations.toml  generated.py  morphs.py  params.py  solutions.toml  symbolic.py  types.py  update_expectations.py
pipeline/boilercv_pipeline/correlations/nusselt/: __init__.py
pipeline/boilercv_pipeline/correlations/symbolic/: __init__.py  dimensionless_bubble_diameter.py
pipeline/boilercv_pipeline/equations/: __init__.py  convert_latex_to_sympy.py  convert_pngs_to_latex.py  convert_sympy_to_python.py  generate_sympy.py  get_png_equations.py  solve.py
pipeline/boilercv_pipeline/examples/: __init__.py  contours.py  detect_surface.py  fill.py  save_roi.py
pipeline/boilercv_pipeline/examples/blobs/: __init__.py  bubbles.py  galaxy.py
pipeline/boilercv_pipeline/examples/cv/: __main__.py  basic_test.py  starry.py
pipeline/boilercv_pipeline/examples/large/: __init__.py  binarize.py  combined.py  compare.py  compress.py  compress_packed.py  convert.py  pack.py  unpack.py
pipeline/boilercv_pipeline/examples/previews/: binarized_composite.py  gray_composite.py  multicolor_composite.py  triple_composite.py
pipeline/boilercv_pipeline/experiments/: __init__.py
pipeline/boilercv_pipeline/experiments/e230920_subcool/: __init__.py  __main__.py  find_contours.py  find_objects.py  find_tracks.py  plot_tracks.py  update_thermal_data.py
pipeline/boilercv_pipeline/experiments/e240215_plotting/: __init__.py
pipeline/boilercv_pipeline/manual/: __init__.py  binarize.py  convert.py  convert_latex_to_sympy.py  convert_pngs_to_latex.py  convert_sympy_to_python.py  flatten_data_dir.py  get_png_equations.py
pipeline/boilercv_pipeline/models/: params.py  paths.py
pipeline/boilercv_pipeline/previews/: __init__.py  __main__.py  binarized.py  composite.py  filled.py  gray.py
pipeline/boilercv_pipeline/stages/: compare_theory.py  fill.py  find_contours.py  find_tracks.py  find_unobstructed.py
pipeline/boilercv_pipeline/stages/preview/: __init__.py  preview_binarized.py  preview_filled.py  preview_gray.py
scripts/: Common.ps1  Common.psm1  Copy-Template.ps1  CrossPy.psm1  Initialize-Repo.ps1  Initialize-Shell.ps1  StrictErrors.psm1  Sync-Py.ps1  Sync-Python.ps1  boilercv_tools.py  convert_latex_to_sympy.py  convert_png_to_latex.py  equations.py  install.py  parse_latex.py  preview_sympy.ipynb  pyproject.toml
scripts/boilercv_tools/: __main__.py  sync.py  types.py
scripts/src/boilercv_tools/: __main__.py
tests/: __init__.py  conftest.py  pyproject.toml  test_boilercv.py  test_importable.py  test_stages.py
tests/boilercv_tests/: __init__.py  conftest.py  e230920_subcool_tests.py  generate.py  test_boilercv.py  test_e230920_subcool.py  test_equations.py  test_morph.py  test_morph_map.py  test_morphs.py  types.py
tests/boilercv_tests/cases/e230920_subcool/: __init__.py  custom_features.py  find_collapse.py  get_thermal_data.py
tests/boilercv_tests/test_equations/: __init__.py  generate.py  test_dimensionless_bubble_diameter.py
tests/data/: generate.py
tests/data/cloud/previews/: gray.nc
tests/data/cloud/schema/: params_schema.json
tests/root/: params.yaml
tests/root/data/contours/: 2022-01-06T15-20-34.h5  2023-09-20T16-52-06.h5  2023-09-20T17-14-18.h5
tests/root/data/filled/: 2023-09-20T17-14-18.nc
tests/root/data/previews/: binarized.nc
tests/root/data/rois/: 2023-09-20T17-14-18.nc
tools/: boilercv_tools.py  pyproject.toml
(+275 files in other folders)
