# * -------------------------------------------------------------------------------- * #
# * Changes below should persist in significant template updates.

# * -------------------------------------------------------------------------------- * #
# * Changes below may be lost in significant template updates.

[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv"
version = "0.0.1"
description = "Computer vision routines suitable for nucleate pool boiling bubble analysis."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "boilercore>=0.0.0",
    "colorcet>=3.0.1",
    "dulwich>=0.21.5",
    "dvc[gs]>=3.10.1",
    "imageio[pyav]>=2.31.1",
    "ipykernel>=6.25.0",
    "loguru>=0.7.0",
    "matplotlib>=3.7.2",
    "more_itertools>=10.1.0",
    "nbconvert>=7.7.3",
    "nbformat>=5.9.2",
    "nbqa>=1.7.0",
    "opencv-contrib-python>=4.8.0.74",
    "pandas[hdf5,performance]>=2.0.2",
    "pandocfilters>=1.5.0",
    "pillow>=10.0.0",
    "ploomber-engine>=0.0.30",
    "pyarrow>=12.0.1",
    "pydantic>=1.10.12,<2",
    "pyjanitor>=0.25.0",
    "pyqtgraph>=0.13.3",
    "pyside6>=6.5.2",
    "pytz>=2023.3",
    "pyyaml>=6.0.1",
    "scikit-image>=0.21.0",
    "scipy>=1.11.1",
    "seaborn>=0.12.2",
    "sparklines>=0.4.2",
    "sympy>=1.12",
    "trackpy>=0.6.1",
    "xarray[accel,io,parallel]>=2023.7.0",
    # ! Unpin numba once it supports numpy>=1.25
    # ? Numba only supports numpy<1.25 https://github.com/numba/numba/issues/8698
    "numba>=0.57.1",
    "numpy>=1.24.4,<1.25",
    # ! Consider switching to pims instead
    "boilercine@git+https://github.com/blakeNaccarato/boilercine@main",
    # ! Pin the merge commit in master once it is merged
    # ? https://github.com/1313e/CMasher/tree/mpl_future_proofing
    "CMasher@git+https://github.com/1313e/CMasher@18d50f4deddf2410a4c51475890329d445fd7e1b",
]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato@gmail.com"

[project.urls]
Changes = "https://blakeNaccarato.github.io/boilercv/changelog.html"
Docs = "https://blakeNaccarato.github.io/boilercv"
Home = "https://github.com/blakeNaccarato/boilercv"
Tracker = "https://github.com/blakeNaccarato/boilercv/issues"

[tool.fawltydeps]
ignore_undeclared = [
    "boilercore", # Not picked up by fawltydeps
    "pytest",
]
ignore_unused = [
    "boilercore",   # Not picked up by fawltydeps
    "nbconvert",    # boilercv.pre_repro.export_notebook
    "numba",        # Pin numba until it supports numpy>=1.25
    "pandas-stubs", # Provides stubs for pandas
    "pyarrow",      # boilercv.init: pd.set_option("mode.string_storage", "pyarrow")
]
[tool.fawltydeps.custom_mapping]
ipykernel = ["IPython"]

[tool.ruff]
fix = true
select = ["ALL"]
src = ["src", "tests"]
target-version = "py311"
extend-exclude = ["template", "typings", ".github"]
ignore = [
    # * ---------------------------------------------------------------------------- * #
    # * Changes below should persist in significant template updates.

    # * ---------------------------------------------------------------------------- * #
    # * Changes below may be lost in significant template updates.

    "ANN",     # Don't require type annotations
    "ARG005",  # Allow unused lambda argument. For consistency across df pipelines.
    "C408",    # Allow dict calls
    "COM",     # Allow magic commas and magic missing commas
    "D10",     # Missing docstrings
    "D20",     # Don't reformat docstrings in these ways
    "D213",    # Multi-line docstring summary should start at the second line
    "D402",    # False positives for parens in first line
    "DTZ",     # Timezones are important, but only contextually necessary.
    "E501",    # Don't check line length. Black handles this.
    "EM",      # Don't check for exception message issues
    "ERA",     # False positives. Don't get rid of commented out code.
    "FBT",     # Allow boolean "traps"
    "FIX002",  # Allow TODOs
    "F841",    # Don't check for or fix unused variables
    "FLY002",  # Allow different string representations
    "G0",      # Allow f-strings, etc. in Loguru logging
    "INP001",  # False positives. Checks for packages missing `__init__.py`
    "ISC",     # False positives. Implicit string concatenation is fine.
    "PD013",   # Allow `stack` instead of `melt`. They're not a direct swap.
    "PD101",   # Allow use of nunique(). False positives
    "PD901",   # Allow `df` variable name. We are all consenting adults here.
    "PD011",   # Allow use of `.values`. False positives.
    "PGH003",  # Until black stops wrapping special ignores, let's allow bare
    "PIE804",  # Allow dict unpack even if unnecessary, consisent for df.assign{**...}
    "PLR0913", # Allow more than five function arguments
    "PLR2004", # Allow magic values. This check is too sensitive
    "PLW2901", # For loop variable
    "RET",     # Return checks are flaky, Sourcery does fine analysing these paths
    "S301",    # Don't warn about pickling. Allow me to shoot myself in the foot.
    "TCH",     # Type checking linter doesn't play nicely with pydantic
    "TD",      # Disable to-do validation. Too pedantic for now.
    "TRY003",  # Allow long exception messages
    "W2",      # Allow whitespace issues. Fixed automatically by black.
    # * ---------------------------------------------------------------------------- * #
    # * These Jupyter-specific ignores can't be per-file-ignores
    # * https://nbqa.readthedocs.io/en/latest/known-limitations.html
    "B018", # Allow "useless" expressions, which do suppress outputs in notebooks
    "F821", # Allow undefined names, such as `display`
    "S101", # Allow assert
    "T201", # Allow print in notebooks
]
unfixable = [
    # * ---------------------------------------------------------------------------- * #
    # * Changes below should persist in significant template updates.

    # * ---------------------------------------------------------------------------- * #
    # * Changes below may be lost in significant template updates.

    "F601", # Don't fix duplicate mapping keys
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
# * ---------------------------------------------------------------------------- * #
# * Changes below should persist in significant template updates.

# * ---------------------------------------------------------------------------- * #
# * Changes below may be lost in significant template updates.
split-on-trailing-comma = false

[tool.ruff.per-file-ignores]
"docs/**" = [
    "E402", # Need to allow imports below patches in docs notebooks
]
"tests/**" = [
    # * ---------------------------------------------------------------------------- * #
    # * Changes below should persist in significant template updates.

    # * ---------------------------------------------------------------------------- * #
    # * Changes below may be lost in significant template updates.

    "ARG001", # Allow unused arguments in tests
    "S101",   # Allow assert in tests
]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
