[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv_tools"
version = "0.0.0"
description = "Tools."
dependencies = [
    "copier==9.1.0",
    "cyclopts==2.4.1",
    "debugpy==1.8.0",
    "dulwich==0.21.7",
    "fawltydeps==0.15.0",
    "flit==3.9.0",
    "keyring==24.3.0",
    "nb-clean==3.2.0",
    "packaging==24.0",
    "pyright==1.1.350",
    "ruff==0.2.1",
    "snakeviz==2.2.0",
    "sourcery-cli==1.15.0",
    "tomlkit==0.12.4",
]
