[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv_docs"
version = "0.0.0"
description = "Docs."
dependencies = [
    # ? Core docs
    "docutils==0.20.1",
    "linkify-it-py==2.0.3",
    "myst-nb==1.0.0",
    "nbformat==5.10.3",
    "numpydoc==1.7.0",
    "sphinx-autobuild==2024.2.4",
    "sphinx-autodoc2==0.5.0",
    "sphinx-book-theme==1.1.2",
    "sphinx-design==0.5.0",
    "sphinx-thebe==0.3.1",
    "sphinx-tippy==0.4.1",
    "sphinx-togglebutton==0.3.2",
    "sphinx==7.2.6",
    "sphinxcontrib-bibtex==2.6.2",
    "sphinxcontrib-mermaid==0.9.2",
    # ? Other deps
    "geopandas>=0.14.3",
    "colorcet>=3.0.1",
    "ipykernel>=6.29.4",
    "matplotlib>=3.7.2",
    "myst-parser>=2.0.0",
    "numpy>=1.24.4",
    "pandas[hdf5,performance]>=2.0.2",
    "seaborn>=0.12.2",
    "shapely>=2.0.3",
    "sympy>=1.12",
    "trackpy>=0.6.2",
]

[tool.fawltydeps]
deps = ["docs/pyproject.toml"]
code = ["docs"]
ignore_undeclared = [
    "boilercore",
    "boilercv_docs",
    "boilercv_pipeline",
    "boilercv_scripts",
    "boilercv_tests",
    "boilercv",
]
ignore_unused = [
    # ? Core docs tools or declared as extensions in `conf.py`
    "linkify-it-py",
    "myst-nb",
    "sphinx-autobuild",
    "sphinx-autodoc2",
    "sphinx-book-theme",
    "sphinx-design",
    "sphinx-thebe",
    "sphinx-tippy",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
]
[tool.fawltydeps.custom_mapping]
ipykernel = ["IPython"]
