[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv_pipeline"
version = "0.0.0"
description = "Data pipeline."
dependencies = [
    "boilercine @ git+https://github.com/blakeNaccarato/boilercine@046ee0146394bebf5693fe0c18bbcea3d3e64fe5", # TODO: Swap with `pims`
    "cmasher>=1.7.2",
    "colorcet>=3.0.1",
    # ? https://github.com/iterative/vscode-dvc/blob/1.2.11/extension/src/cli/dvc/contract.ts#L3
    "dvc>=3.33.3",
    "loguru>=0.7.0",
    "matplotlib>=3.7.2",
    "numpy>=1.24.4",
    "opencv-python-headless>=4.9.0.80",
    "pandas[hdf5,performance]>=2.0.2",
    "ploomber-engine>=0.0.30",
    "pyarrow>=14.0.1",
    "pydantic>=2",
    "scikit-image>=0.21.0",
    "scipy>=1.11.1",
    "seaborn>=0.12.2",
    "sparklines>=0.4.2",
    "tqdm>=4.66.1",
    "xarray[accel,io,parallel]>=2023.7.0",
]

[tool.fawltydeps]
deps = ["pipeline/pyproject.toml"]
code = ["pipeline/boilercv_pipeline"]
ignore_undeclared = [
    "boilercore",
    "boilercv_docs",
    "boilercv_pipeline",
    "boilercv_scripts",
    "boilercv_tests",
    "boilercv",
]
ignore_unused = [
    "dvc",     # Core dependency for reproducing the pipeline
    "pyarrow", # Used in `boilercv.__init__`
]
