[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv_pipeline"
version = "0.0.0"
description = "Data pipeline."
dependencies = [
    # TODO: Swap with `pims`
    "boilercine @ git+https://github.com/blakeNaccarato/boilercine@046ee0146394bebf5693fe0c18bbcea3d3e64fe5",
    "cmasher>=1.7.2",
    "colorcet>=3.0.1",
    "copykitten>=1.1.1",
    "cyclopts>=2.6.1",
    # ? https://github.com/iterative/vscode-dvc/blob/1.2.12/extension/src/cli/dvc/contract.ts#L3
    "dvc>=3.33.3",
    "imageio[pyav]>=2.31.1",
    "loguru>=0.7.0",
    "matplotlib>=3.7.2",
    "numpy>=1.24.4",
    "opencv-python-headless>=4.9.0.80",
    "pandas[hdf5,performance]>=2.0.2",
    "pillow>=10.0.0",
    "ploomber-engine>=0.0.30",
    "pyarrow>=14.0.1",
    "pydantic>=2.7.1",                  # ? RootModel improvements
    "pyqtgraph>=0.13.3",
    # ? Wheels are missing on Linux for PySide6, `uv` doesn't like it
    "pyside6-addons==6.7.0; sys_platform!='linux'",
    "pyside6-essentials==6.7.0; sys_platform!='linux'",
    "ruamel.yaml>=0.17.32",
    "scikit-image>=0.21.0",
    "scipy>=1.11.1",
    "seaborn>=0.12.2",
    "sparklines>=0.4.2",
    "stopit>=1.1.2",
    "sympy>=1.12",
    "tomlkit>=0.12.4",
    "tqdm>=4.66.1",
    "xarray[accel,io,parallel]>=2023.7.0",
]

[tool.fawltydeps]
deps = ["pipeline/pyproject.toml"]
code = ["pipeline/boilercv_pipeline"]
ignore_undeclared = [
    "boilercore",
    "boilercv_docs",
    "boilercv_pipeline",
    "boilercv_scripts",
    "boilercv_tests",
    "boilercv",
]
ignore_unused = [
    "dvc",     # Core dependency for reproducing the pipeline
    "pyarrow", # Used in `boilercv.__init__`
]
[tool.fawltydeps.custom_mapping]
pydantic = ["pydantic", "pydantic_core"]
