[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv_tools"
version = "0.0.0"
description = "Tools."
dependencies = [
    "cyclopts==2.5.0",
    "ipython==8.23.0",
    "pipx==1.5.0",
    "ruamel-yaml==0.18.6",
]
[project.scripts]
"boilercv_tools" = "boilercv_tools.__main__:main"

[tool.fawltydeps]
deps = ["scripts/pyproject.toml"]
code = ["scripts/boilercv_tools"]
ignore_undeclared = [
    "boilercore",
    "boilercv_docs",
    "boilercv_pipeline",
    "boilercv_tests",
    "boilercv_tools",
    "boilercv",
]
ignore_unused = [
    # ? Core script tools
    "pipx", # For `pipx run` of scripts with dependencies isolated by PEP 723
    # ? Other deps
    "ipython", # Used for local experimentation
]
[tool.fawltydeps.custom_mapping]
ruamel-yaml = ["ruamel"]
