[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv_tests"
version = "0.0.0"
description = "Tests."
dependencies = [
    "cachier @ git+https://github.com/blakeNaccarato/cachier@0892f53dc8fd9fb8a7f959305a1a9ec692876dc0", # Allows `dill` caching
    "pytest-cov==4.1.0",
    "pytest-custom-exit-code==0.3.0",
    "pytest-github-actions-annotate-failures==0.2.0",
    "pytest-harvest==1.10.4",
    "pytest-plt==1.1.1",
    "pytest-xdist[psutil,setproctitle]==3.5.0",
    "pytest==8.0.0",
]

[tool.fawltydeps]
actions = ["check_undeclared"]
deps = ["tests/pyproject.toml", "pyproject.toml"]
code = ["tests/boilercv_tests"]
ignore_undeclared = ["boilercv"]
[tool.fawltydeps.custom_mapping]
boilercore = ["boilercore"]
